syntax = "proto3";

option go_package = "github.com/zjregee/shardkv/proto";

package shardkv;

service RaftService {
  rpc HandleRequestVote (RequestVoteArgs) returns (RequestVoteReply);
  rpc HandleAppendEntries (AppendEntriesArgs) returns (AppendEntriesReply);
  rpc HandleInstallSnapshot (InstallSnapshotArgs) returns (InstallSnapshotReply);
}

message LogEntry {
    int32 term    = 1;
    bytes command = 2;
}

message RequestVoteArgs {
  int32 candidate_term  = 1;
  int32 candidate_index = 2;
  int32 last_log_index  = 3;
  int32 last_log_term   = 4;
}

message RequestVoteReply {
  int32 term    = 1;
  bool  success = 2;
}

message AppendEntriesArgs {
  int32             leader_term    = 1;
  int32             leader_index   = 2;
  int32             leader_commit  = 3;
  int32             prev_log_index = 4;
  int32             prev_log_term  = 5;
  repeated LogEntry entries        = 6;
}

message AppendEntriesReply {
  int32          term         = 1;
  bool           success      = 2;
  repeated int32 terms        = 3;
  repeated int32 last_indexes = 4;
}

message InstallSnapshotArgs {
  int32 leader_term    = 1;
  int32 leader_index   = 2;
  int32 snapshot_term  = 3;
  int32 snapshot_index = 4;
  bytes snapshot       = 5;
}

message InstallSnapshotReply {
  int32 term    = 1;
  bool  success = 2;
}
